# apertium-oc-es

./: .gitattributes  .gitignore  Makefile.am  configure.ac
test/: es-oc-chunker-expected.txt  es-oc-generator-expected.txt  es-oc-input.txt  es-oc-morph-expected.txt  es-oc-tagger-expected.txt  es-oc@aran-chunker-expected.txt  es-oc@aran-input.txt  es-oc@aran-morph-expected.txt  es-oc@aran-postchunk-expected.txt  es-oc@aran-postgen-expected.txt  oc-es-chunker-expected.txt  oc-es-generator-expected.txt  oc-es-input.txt  oc-es-morph-expected.txt  oc-es-postchunk-expected.txt  oc-es-postgen-expected.txt  oc-es-pretransfer-expected.txt  oc@aran-es-chunker-expected.txt  oc@aran-es-generator-expected.txt  oc@aran-es-input.txt  oc@aran-es-interchunk-expected.txt  oc@aran-es-morph-expected.txt  oc@aran-es-postchunk-expected.txt  oc@aran-es-pretransfer-expected.txt  oc@aran-es-tagger-expected.txt  tests.json
